--- a/pages/login/login.wxml
+++ b/pages/login/login.wxml
@@ -3,7 +3,7 @@
   <image src="../image/WeChat.png" style="width: 80px; height: 80px;"></image>
 </view>
 <view class="text1">
-  <text>微信授权页面</text>
+  <text>登录之后更精彩</text>
 </view>
 <view class="text2">
   <text>授权并同意使用微信账号登录当前小程序</text>
